...
            )
        )
    )
}

object CategoriesTestTags {
    const val LAZY_COLUMN_CONTAINER = "LazyColumnContainer"
    const val CARD_ITEM = "CardItem"
    const val TAB_ITEM = "TabItem"
    const val TITLE_TEXT = "TitleText"
    const val AUTHOR_TEXT = "AuthorText"
    const val PUBLISHED_AT_TEXT = "PublishedAtText"
    const val LOADING_VIEW = "LoadingView"

}
