<resources>
    <string name="app_name">Biknews</string>
    <string name="top_news_title">Top News</string>
    <string name="detail_screen_title">Detail</string>
    <string name="error_connectivity">Connectivity Error</string>
    <string name="error_server">Internal server error: %1$d</string>
    <string name="error_unexpected">An unexpected error happened, try later please</string>
    <string name="loading">Loading…</string>
    <string name="not_available">Not available</string>
    <string name="back">Back</string>
    <string name="author">Author</string>
    <string name="read_article">Read Full Article Here</string>
    <string name="empty_news">Ups! Currently there aren\'t news.</string>
</resources>