...
    const val LAZY_COLUMN_CONTAINER = "SourceContentContainer"
    const val CARD_CONTAINER = "CardSourceContainer"
    const val SOURCE_TITLE = "SourceTitle"
    const val SOURCE_DESCRIPTION = "SourceDescription"
    const val SOURCE_READ_FULL_ARTICLE_CARD = "SourceReadFullArticleCard"
    const val CLICKABLE_TEXT = "SourceClickableText"
    const val TOB_BAR = "TopBarSource"
    const val DROP_DOWN_MENU = "DropDownMenuSources"
    const val DROP_DOWN_MENU_ITEM = "DropDownMenuItemSources"
}
